# MuzhaRPG_Project

./: .env.example  .gitattributes  .gitignore  .mcp.json  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt
.claude/: settings.json
ai_engine/: CONFIG_GUIDE.md  SPRITESHEET_WORKFLOW.md  config.json  start_server.ps1  start_server.sh
ai_engine/scripts/: generate_spritesheet.py  split_map_assets_gui.py  test_ping.py
art_source/: manifest.json
art_source/pipeline/: README.md  (+4 more)
docs/: BLUEPRINT.md  INDEX.md  SCENE_DESIGN_WORKFLOW.md  addons.md  architecture.md  art-pipeline-refactor-plan.md  art-production-guide.md  asset-naming-convention.md  chapter-01-scene-automation-plan.md  chapter-development-manual.md  chapter-development.md  dialogue-architecture.md  godot-modules.md  scene-design-workflow.md  tilemapdual-guide.md
game/: project.godot
llm_engine/: config-guide.md  config.default.json  config.json  start_server.ps1  start_server.sh
pipeline/: README.md  animation_templates.py  manifest.py  pixellab_async.py  pixellab_client.py  spritesheet.py  zones.py
reports/: progress_report.html
scripts/: IMPORT_ASSETS_README.md  build_zone.py  create_dummy_character.py  generate_spritesheet.py  import-assets-guide.md  import_assets.py  scaffold_zone.py  sync_zone_tags.py  test_ping.py
temp/: Chapter 1：鐵門後的那個人.txt
tests/: conftest.py  test_godot_import.py  test_manifest_prompts.py  test_manifest_stages.py  test_naming.py  test_pixellab_client_wrappers.py  test_stage_framework.py
tools/: migrate_manifest_v2.py  scrape_pixellab_docs.py
(+1031 files in other folders)
