[project]
name = "muzharpg-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.33.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.2.2",
    "mcp>=1.27.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
]

[dependency-groups]
dev = [
    "playwright>=1.59.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "tools/asset_dashboard/tests"]
pythonpath = [".", "pipeline"]
